--- a/stylee.css
+++ b/stylee.css
@@ -18,19 +18,42 @@ button {
 
 button:hover {
     transform: scale(1.1);
-    box-shadow: 0 0 10px rgba(255, 1, 1, 0.3);
+    box-shadow: 0 0 30px rgba(255, 1, 1, 0.3);
 }
 
 main {
     background-color: rgb(202, 25, 25);
     color: white;
-    padding: 500px;
+    padding: 200px;
     text-align: center;
 }
 
 footer {
-    background-color: #000000;
+    background-color: #ffffff;
     color: white;
     padding: 50px;
     text-align: center;
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-link {
+    margin: 0 10px;
+    text-decoration: none;
+}
+
+.footer-button {
+    background: none;
+    border: none;
+    padding: 0;
+    cursor: pointer;
+}
+
+.footer-button img {
+    width: 50px;
+    height: auto;
 }
