--- a/stylee.css
+++ b/stylee.css
@@ -28,7 +28,8 @@ main {
     text-align: center;
 }
 
-footer {
+
+.footer {
     background-color: #ffffff;
     color: white;
     padding: 50px;
@@ -57,4 +58,22 @@ footer {
     width: 50px;
     height: auto;
 }
+
+
+@media only screen and (max-width: 600px) {
+    .footer {
+        padding: 10px; 
+    }
+
+    .footer-nav {
+        flex-direction: column; 
+        align-items: center; 
+
+    .footer-link {
+        margin: 1px 0; 
+    }
+}
+}
+
+
 
