--- a/stylee.css
+++ b/stylee.css
@@ -62,10 +62,44 @@ button:hover {
         flex-direction: column; 
         align-items: center; 
 
-    .footer-link {
-        margin: 1px 0; 
-    }
 }
+    .footer-button {
+        width: 100%;
+    }
+
+    .footer-button img {
+        border-radius: 0;
+    }
+
+    nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+    .footer-link {
+        flex: 1;
+        max-width: 150px;
+    }
+
+    .main-nav button {
+        width: 100%;
+    }
+
+    .main-nav button {
+        width: 100%;
+        border-radius: 0;
+    }
+    
+    .main-nav {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    .link {
+        flex: 1;
+        max-width: 150px;
+    }
 }
 
 
